new header color and less info

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 /* Cabeçalho */
 header {
-    background-color: #ff8d21;
+    background-color: #f19a1e;
     padding: 1rem 0;
     border-bottom: 2px solid #eee;
     position: sticky; /* Fixa o cabeçalho no topo */
